src/app/globals.css
@import "tailwindcss";
@config "../../tailwind.config.js";

@font-face {
  font-family: 'SUIT-Medium';
  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

:root {
  --white: #ffffff;
  --black: #171717;

  --background: #ffffff;
  --foreground: var(--black);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  min-height: 100vh;
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

.dark {
  --background: var(--black);
  --foreground: var(--white);
}

body * {
  font-family: "SUIT-Medium";
}

@keyframes fadeInUp {
  0% {
      opacity: 0;
  }
  to {
      opacity: 1;
  }
}

.scrollbar-none {
  -ms-overflow-style: none;  /* IE & Edge */
  scrollbar-width: none;     /* Firefox */
}

.scrollbar-none::-webkit-scrollbar {
  display: none;             /* Chrome, Safari, Opera */
}

@-moz-keyframes spin {
  from { -moz-transform: rotate(0deg); }
  to { -moz-transform: rotate(360deg); }
}
@-webkit-keyframes spin {
  from { -webkit-transform: rotate(0deg); }
  to { -webkit-transform: rotate(360deg); }
}
@keyframes spin {
  from {transform:rotate(0deg);}
  to {transform:rotate(360deg);}
}

.fadedtext {
  @apply text-gray-500
}

.redbutton {
  @apply cursor-pointer text-red-600 dark:text-red-400 hover:text-red-800 hover:dark:text-red-300
}

